# ggslicerPy

./: README.md  pyproject.toml
ggslicer/: __init__.py  check.py  readwrite.py  slice.py  test_readwrite.py
ggslicer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
