[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build_backend = "setuptools.build_meta"

[project]
name = "ggslicer"
version = "0.1.0"
description = "Prepare volumetric imaging data"
readme = "README.md"
requires-python = ">= 3.11.15"
dependencies = [
    "SimpleITK",
    "numpy",
    "pandas",
    "tqdm"
]

[tool.setuptools]
packages = ["ggslicer"]

[project.optional-dependencies]
dev = [
    "pytest",
]
